# btcli

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  PR.md  README.md  btqs_requirements.txt  cli.py  cuda_requirements.txt  pyproject.toml  requirements.txt  setup.py
.circleci/: check_compatibility.py  config.yml
.github/: CODEOWNERS
.github/workflows/: e2e-subtensor-tests.yml  release.yml  ruff-formatter.yml  unit-tests.yml
bittensor_cli/: __init__.py  cli.py  doc_generation_helper.py  newdoc.md  readme.md  version.py
bittensor_cli/src/: __init__.py  subtensor_interface.py  utils.py
bittensor_cli/src/bittensor/: async_substrate_interface.py  balances.py  chain_data.py  json_utils.py  minigraph.py  networking.py  slip39.py  subtensor_interface.py  swap_math.py  utils.py
bittensor_cli/src/bittensor/extrinsics/: liquidity.py  mev_shield.py  registration.py  root.py  serving.py  transfer.py
bittensor_cli/src/bittensor/templates/: main-filters.j2  main-header.j2  neuron-details.j2  price-multi.j2  price-single.j2  subnet-details-header.j2  subnet-details.j2  subnet-metrics.j2  subnets-table.j2  table.j2  view.css  view.j2  view.js
bittensor_cli/src/commands/: proxy.py  root.py  stake.py  subnets.py  sudo.py  view.py  wallets.py  weights.py
bittensor_cli/src/commands/axon/: axon.py
bittensor_cli/src/commands/crowd/: contribute.py  contributors.py  create.py  dissolve.py  refund.py  update.py  utils.py  view.py
bittensor_cli/src/commands/extensions/: ext_commands.py  manifest.py  templates.py
bittensor_cli/src/commands/liquidity/: __init__.py  add.py  liquidity.py  list.py  remove.py  utils.py
bittensor_cli/src/commands/proxy/: __init__.py  add.py  list.py  remove.py
bittensor_cli/src/commands/stake/: __init__.py  add.py  auto_staking.py  children_hotkeys.py  claim.py  get_nominators.py  list.py  move.py  remove.py  stake.py  validator_claim.py  wizard.py
bittensor_cli/src/commands/subnets/: mechanisms.py  price.py  subnets.py
bittensor_cli/src/templates/: table.j2
bittensor_cli/src/tests/e2e_tests/: conftest.py  test_root.py  test_staking_sudo.py  test_wallet_creations.py  test_wallet_interactions.py
btqs/: btqs_cli.py  config.py  utils.py
btqs/commands/: chain.py  neurons.py  subnet.py
btqs/src/commands/: chain.py  neurons.py
commander/: code.html  mockup.py
contrib/: CONTRIBUTING.MD
examples/sample-extension/: extension.yaml  main.py
examples/sample-extension/tests/: test_sample_extension.py
ptn_cli/: __init__.py  ptncli.py
ptn_cli/src/: config.py
ptn_cli/src/commands/asset/: select.py
ptn_cli/src/commands/collateral/: add.py  deposit.py  list.py  withdraw.py
ptn_cli/src/utils/: api.py
src/: __init__.py  subtensor_interface.py  utils.py  wallets.py
src/bittensor/: async_substrate_interface.py  balances.py  chain_data.py  minigraph.py  networking.py
src/bittensor/extrinsics/: registration.py  root.py  transfer.py
src/commands/: root.py  stake.py  subnets.py  sudo.py  wallets.py  weights.py
src/templates/: table.j2
src/tests/e2e_tests/: conftest.py  test_root.py  test_subnets.py  test_wallet.py  test_wallet_creations.py  test_wallet_interactions.py  test_wallet_overview_inspect.py  test_wallet_transfer.py  utils.py
tests/e2e_tests/: conftest.py  test_axon.py  test_batching.py  test_buyback.py  test_children_hotkeys.py  test_claim_types.py  test_coldkey_swap.py  test_crowd_contributors.py  test_crowd_identity_display.py  test_crowdloans.py  test_hyperparams_setting.py  test_liquidity.py  test_proxy.py  test_registration.py  test_root.py  test_senate.py  test_set_identity.py  test_stake_burn.py  test_stake_movement.py  test_stake_slippage_protection.py  test_staking_sudo.py  test_unstaking.py  test_wallet_creations.py  test_wallet_interactions.py  utils.py
tests/unit_tests/: conftest.py  test_axon_commands.py  test_balances.py  test_batching.py  test_chain_data.py  test_children_hotkeys.py  test_cli.py  test_cli_exit_codes.py  test_crowd_contributors.py  test_crowd_create_custom_call.py  test_crowd_proxy_creator_checks.py  test_extensions.py  test_hyperparams.py  test_inspect.py  test_json_utils.py  test_liquidity_add.py  test_liquidity_utils.py  test_metagraph_list_sort_filter.py  test_proxy.py  test_proxy_address_resolution.py  test_root_extrinsics.py  test_stake_add.py  test_stake_move.py  test_stake_move_display.py  test_subnets.py  test_subnets_list_sort_filter.py  test_subnets_register.py  test_sudo_hyperparameter_permissions.py  test_sudo_stake_burn.py  test_swap_math.py  test_transfer_extrinsic.py  test_unstake_helpers.py  test_utils.py  test_utils_pure.py  test_wallet_create.py  test_wallet_regen_json_path.py  test_weights_retry_command.py
vanta_cli/: __init__.py  vanta.py
vanta_cli/src/: config.py
vanta_cli/src/commands/asset/: select.py
vanta_cli/src/commands/collateral/: deposit.py  list.py  withdraw.py
vanta_cli/src/commands/entity/: __init__.py  apikey.py  create_subaccount.py  register.py
vanta_cli/src/utils/: api.py
