[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bittensor-cli"
version = "9.21.1"
description = "Bittensor CLI"
readme = "README.md"
authors = [
    { name = "bittensor.com" }
]
license = "MIT"
scripts = { btcli = "bittensor_cli.cli:main" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
dependencies = [
    "wheel>0.46.1",
    "async-substrate-interface>=2.0.3,<3.0.0",
    "aiohttp~=3.13",
    "backoff~=2.2.1",
    "bittensor-drand>=1.3.0",
    "GitPython>=3.0.0",
    "netaddr~=1.3.0",
    "numpy>=2.0.1,<3.0.0",
    "Jinja2",
    "PyYAML~=6.0",
    "rich>=13.7,<15.0",
    "cyscale>=0.3.3,<1.0.0",
    "typer>=0.16",
    "typing_extensions>4.0.0; python_version<'3.11'",
    "bittensor-wallet==4.0.1",
    "packaging",
    "plotille>=5.0.0",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff==0.15.12",
]

[project.urls]
# more details can be found here
homepage = "https://github.com/opentensor/btcli"
Repository = "https://github.com/opentensor/btcli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
