[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vanta-cli"
version = "2.2.2"
description = "Vanta Network CLI"
readme = "README.md"
authors = [
    {name = "taoshi.io" }
]
license = "MIT"
scripts = { vanta = "vanta_cli.vanta:main", btcli = "bittensor_cli.cli:main" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
dependencies = [
    "wheel",
    "async-substrate-interface==2.0.2",
    "aiohttp~=3.13",
    "backoff~=2.2.1",
    "bittensor-drand>=1.3.0",
    "GitPython>=3.0.0",
    "netaddr~=1.3.0",
    "numpy>=2.0.1,<3.0.0",
    "Jinja2",
    "pycryptodome>=3.0.0,<4.0.0",
    "PyYAML~=6.0",
    "rich>=13.7,<15.0",
    "cyscale>=0.3.1,<1.0.0",
    "typer>=0.16",
    "typing_extensions>4.0.0; python_version<'3.11'",
    "bittensor-wallet==4.0.1",
    "packaging",
    "plotille>=5.0.0",
    "plotly>=6.0.0",
    "bittensor-cli==9.21.0",
    "collateral_sdk @ git+https://github.com/taoshidev/collateral_sdk.git@1.0.9",
]

[project.optional-dependencies]
cuda = [
    "torch>=1.13.1,<3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff==0.15.12",
]

[project.urls]
# more details can be found here
homepage = "https://github.com/taoshidev/vanta-cli"
Repository = "https://github.com/taoshidev/vanta-cli"
